--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ a:hover {
 
 path.link {
     fill: none;
-    stroke: #ccc;
+    /* 
+     * stroke: #ccc;
+     */
     stroke-width: 1.5px;
 }
